--- a/Concierge.html
+++ b/Concierge.html
@@ -189,8 +189,8 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script>
     const API_URL = '/api/luggage';
-    const ARCHIVE_URL = 'http://10.141.116.185:3000/api/archivio-dedicato';
-    const USERS_URL = 'http://10.141.116.185:3000/api/users';
+    const ARCHIVE_URL = '/api/archivio-dedicato';
+    const USERS_URL = '/api/users';
 
     function generate8DigitId() { return Math.floor(10000000 + Math.random() * 90000000); }
 
@@ -253,9 +253,9 @@
                         <small class="text-warning d-block">Pezzi: ${t.pcs || 1}</small>
                     </div>
                     <div class="btn-group-custom">
-                        <button class="btn-c ${isWorking ? 'btn-active' : ''}" onclick="toggleStatus('${t.id}', '${t.status}', '${t.guest}', '${t.room}', '${t.pcs}')">${isWorking ? 'In Corso' : 'In Consegna'}</button>
-                        <button class="btn-c" onclick="completeDelivery('${t.id}', '${t.guest}', '${t.room}', '${t.pcs}', ${timeRef}, '${t.type}')">Consegnato</button>
-                        <button class="btn-c btn-annulla" onclick="cancelWithPorter('${t.id}', '${t.guest}', '${t.room}', '${t.pcs}')">Annulla</button>
+                        <button class="btn-c ${isWorking ? 'btn-active' : ''}" onclick="toggleStatus('${t._id}', '${t.status}', '${t.guest}', '${t.room}', '${t.pcs}')">${isWorking ? 'In Corso' : 'In Consegna'}</button>
+                        <button class="btn-c" onclick="completeDelivery('${t._id}', '${t.guest}', '${t.room}', '${t.pcs}', ${timeRef}, '${t.type}')">Consegnato</button>
+                        <button class="btn-c btn-annulla" onclick="cancelWithPorter('${t._id}', '${t.guest}', '${t.room}', '${t.pcs}')">Annulla</button>
                     </div>
                 </div>`}).join('');
 
@@ -323,3 +323,4 @@
 </script>
 </body>
 </html>
+
